スタイル等調整

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,25 +1,31 @@
-.container{
-    margin: auto;
-    max-width: 600px;
-    font-family: sans-serif;
+.container {
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  text-align: center;
+  font-family: sans-serif;
 }
-.heading{
-    color: rebeccapurple;
+.content {
+  text-align: left;
 }
-.nav-links{
-    display: flex;
-    list-style: none;
-    padding-left: 0;
+.heading {
+  color: black;
 }
-.nav-link-item{
-    padding-right: 2rem;
+.nav-links {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
 }
-.nav-link-text{
-    color: black;
+.nav-link-item {
+  padding-right: 2rem;
 }
-.site-title{
-    font-size: 3rem;
-    color: gray;
-    font-weight: 700;
-    margin: 3rem 0;
+.nav-link-text {
+  color: black;
+}
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+  margin: 3rem 0;
 }
