--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,7 @@
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
+  margin: auto;
   max-width: 600px;
   text-align: center;
   font-family: sans-serif;
