--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,8 +2,8 @@
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
-  margin: auto;
   max-width: 600px;
+  min-height: 85vh;
   text-align: center;
   font-family: sans-serif;
 }
